@@ -5,6 +5,7 @@
     * Attribute ro renamed to read_only
     * Fix printer returning to READY instead of IDLE
     * Respect the X-Forwarded-Prefix header in Wizard
+    * Add focus support for the v4l2 cameras
 
 0.7.0 (2023-05-19)
     * Fixed printer sends info about api key change to Connect after change
